--- a/frontend/src/components/Deck/Deck.module.css
+++ b/frontend/src/components/Deck/Deck.module.css
@@ -6,9 +6,10 @@
   position: absolute;
   width: 141px;
   height: 201px;
-  transition: transform 0.5s ease-out, opacity 0.5s ease-out;
+  transform: translateY(0);
+  transition: transform .5s ease-out, opacity 0.5s ease-out;
   border: 1px solid rgb(119, 123, 118);
-  
+  will-change: transform;
 
   & img {
     width: 100%;
