--- a/frontend/src/components/TextField/TextField.module.css
+++ b/frontend/src/components/TextField/TextField.module.css
@@ -3,16 +3,18 @@
     & label {
         display: flex;
         flex-direction: column;
-        align-items: center;
         justify-content: center;
+        align-items: center;
         width: 100%;
         height: 100%;
-        color: transparent;
-        transition: color 0.1s ease-in-out;
+        color: white;
+        transition: all 0.1s ease-in-out;
         z-index: -1;
+        font-size: 16px;
+
 
         &:has(input[value=""]) {
-            color: white;
+            font-size: 32px;
         }
 
         & input {
@@ -22,14 +24,11 @@
             position: relative;
             color: white;
             border-bottom: 4px solid white;
-            font-size: 16px;
+            font-size: 32px;
             font-weight: 500;
-            caret-color: transparent;
 
-                &:focus {
-                    outline: none;
-                    animation: blink 0.5s ease-in-out infinite;
-                }
+            caret-color: white;
+            line-height: 5px;
         }
     }
 }
