--- a/frontend/src/components/game/Card/Card.module.css
+++ b/frontend/src/components/game/Card/Card.module.css
@@ -1,16 +1,13 @@
 .card {
-    width: 141px;
-    height: 201px;
+    width: clamp(4rem, 8vw, 8rem);
     background-color: white;
     border-radius: 10px;
-    margin: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
-
-    animation: cardReveal 0.3s forwards;
-
+    aspect-ratio: 95/132;
     box-shadow: 0 10px 5px #27272754;
+    position: relative;
 
     & img {
         width: auto;
@@ -18,14 +15,10 @@
     }
 }
 
-@keyframes cardReveal {
-    from {
-        opacity: 0;
-        transform: translateY(-100px) translateX(5px);
-    }
-
-    to {
-        opacity: 1;
-        transform: translateY(0);
-    }
+.isMini{
+    width: clamp(2rem, 6vw, 5rem);
 }
+
+/* .card:not(:first-child){
+    margin-left: -80%;
+} */
