--- a/frontend/src/components/game/HandCards/HandCards.module.css
+++ b/frontend/src/components/game/HandCards/HandCards.module.css
@@ -1,3 +1,40 @@
 .handContainer {
     display: flex;
+    position: relative;
+    gap: 10px;
+    width: min-content;
+}
+
+
+.blackjack,
+.busted,
+.twentyone {
+  position: absolute;
+  font-size: 4rem;
+  left: 50%;
+  top: 50%;
+  transform: translateX(-50%) translateY(-50%) rotate(-30deg);
+  background: #303030;
+  padding: 5px 20px;
+  opacity: 0.99;
+  z-index: 999;
+}
+
+.busted {
+  background-color: red;
+}
+
+.twentyone {
+  background-color: rgb(119, 62, 161);
+}
+
+.isMini{
+    overflow: hidden;
+
+    .blackjack,
+    .busted,
+    .twentyone {
+        color: white;
+        font-size: clamp(.2rem, 1rem, 1.5rem)
+    };
 }
