--- a/frontend/src/components/game/LocalHand/LocalHand.module.css
+++ b/frontend/src/components/game/LocalHand/LocalHand.module.css
@@ -18,7 +18,6 @@
 }
 
 .betContainer {
-  background-color: #0000002a;
   padding: 16px;
   font-size: 74px;
   border-radius: 27px;
@@ -28,36 +27,27 @@
   background-color: #2a2a2a;
   border: none;
   color: white;
-  font-size: 36px;
+  font-size: clamp(2em, 4rem, 6em);
   text-align: center;
   padding: 16px;
   font-weight: 900;
   height: min-content;
   cursor: pointer;
+  border-radius: 10px;
 
   &:disabled {
     opacity: 0.6;
     cursor: not-allowed;
   }
+
+  &.stand{
+    background-color: var(--red);
+    color: var(--white);
+  }
 }
 
-.blackjack,
-.busted,
-.twentyone {
-  position: absolute;
-  font-size: 64px;
-  left: 50%;
-  transform: translateX(-50%) rotate(-20deg);
-  bottom: 35%;
-  background: #303030;
-  padding: 5px 20px;
-  opacity: 0.99;
-}
-
-.busted {
-  background-color: red;
-}
-
-.twentyone {
-  background-color: rgb(119, 62, 161);
+@media (max-width: 1200px) {
+  .button{
+    font-size: clamp(1em, 2rem, 4em);
+  }
 }
